--- a/app/views/patients/_form.html.erb
+++ b/app/views/patients/_form.html.erb
@@ -21,6 +21,21 @@
     <%= form.text_area :address %>
   </div>
 
+  <div class="field">
+    <%= form.label :phone_number %>
+    <%= form.number_field :phone_number %>
+  </div>
+
+  <div class="field">
+    <%= form.label :patient_details %>
+    <%= form.text_area :patient_details %>
+  </div>
+
+  <div class="field">
+    <%= form.label :date %>
+    <%= form.datetime_field :date  %>
+  </div>
+
   <div class="actions">
     <%= form.submit %>
   </div>
