--- a/app/views/patients/show.html.erb
+++ b/app/views/patients/show.html.erb
@@ -16,9 +16,14 @@
 </p>
 
 <p>
+  <strong>Patient Detail:</strong>
+  <%= @patient.patient_details %>
+</p>
+
+<p>
   <strong>Date:</strong>
   <%= @patient.date %>
 </p>
 
 <%= link_to 'Edit', edit_patient_path(@patient) %> |
-<%= link_to 'Back', patient_path %>
+<%= link_to 'Back', patients_path %>
